[gd_scene load_steps=11 format=3 uid="uid://bim3myw1wmrsy"]

[ext_resource type="Script" path="res://scripts/lixo.gd" id="1_xylce"]
[ext_resource type="Texture2D" uid="uid://dw0v1vrbcx8jv" path="res://Items, UI & effects/effects/Green_Sparkle (16 x 16).png" id="2_qve1w"]
[ext_resource type="Texture2D" uid="uid://bebdrq62apxe6" path="res://Items, UI & effects/Items/Lixo 2/Lixo 2 (16 x 16).png" id="3_y7hur"]
[ext_resource type="AudioStream" uid="uid://dsgk7x5g2unyq" path="res://sounds/coin_sfx.wav" id="4_fo3l6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wmj50"]
atlas = ExtResource("2_qve1w")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8vgv"]
atlas = ExtResource("2_qve1w")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni61j"]
atlas = ExtResource("2_qve1w")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w687y"]
atlas = ExtResource("3_y7hur")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_e6xds"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmj50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8vgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni61j")
}],
"loop": false,
"name": &"collect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w687y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bugbj"]
size = Vector2(8, 13)

[node name="lixo2" type="Area2D"]
collision_layer = 8
script = ExtResource("1_xylce")

[node name="anim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_e6xds")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_bugbj")

[node name="coin_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fo3l6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
